--- a/templates/snack_list.html
+++ b/templates/snack_list.html
@@ -1,17 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-
-</div>
+<div class="list">
+<a class="create" href="{% url 'snack_create' %}">+ New snack</a>
 <ul>
-
   {% for snack in object_list %}
   <li>
-    
+    <a  href="{% url 'snack_detail' snack.pk %}">{{ snack.title }}</a>
   </li>
   {% endfor %}
-</div>
 </ul>
-
+</div>
 {% endblock content %}
